--- a/app/src/main/res/layout/activity_sabt_nam.xml
+++ b/app/src/main/res/layout/activity_sabt_nam.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,9 @@
     android:background="#76b852"
     tools:context=".activity.sabt_nam">
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="700dp">
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="349dp"
@@ -92,3 +94,4 @@
         android:translationY="600dp"
         android:text="" />
 </RelativeLayout>
+</ScrollView>
