--- a/app/src/main/res/layout/activity_percent.xml
+++ b/app/src/main/res/layout/activity_percent.xml
@@ -8,4 +8,11 @@
     android:id="@+id/layout"
     tools:context=".activity.percent">
 
+    <Button
+        android:id="@+id/darsad"
+     android:layout_centerHorizontal="true"
+        android:translationY="600dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="next" />
 </RelativeLayout>
