--- a/app/src/main/res/layout/activity_percent.xml
+++ b/app/src/main/res/layout/activity_percent.xml
@@ -15,4 +15,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="next" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="درصد آخرین آزمون خود را وارد کنید" />
+
 </RelativeLayout>
