--- a/app/src/main/res/layout/activity_percent.xml
+++ b/app/src/main/res/layout/activity_percent.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#76b852"
+    android:background="@drawable/images"
     android:id="@+id/layout"
     tools:context=".activity.percent">
 
@@ -12,14 +12,18 @@
         android:id="@+id/darsad"
      android:layout_centerHorizontal="true"
         android:translationY="600dp"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="next" />
+        android:text="مرحله ی بعد" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:layout_centerHorizontal="true"
         android:text="درصد آخرین آزمون خود را وارد کنید" />
 
