--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -2,22 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#76b852"
+
+    android:background="@drawable/backprofiles"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.first_page">
 
-    <TextView
-        android:id="@+id/head"
-        android:layout_width="267dp"
-        android:background="@android:color/white"
-        android:translationX="80dp"
-        android:translationY="30dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_height="40dp"
-        android:text="" />
+
 
     <Button
         android:id="@+id/history"
@@ -26,6 +17,8 @@
         android:translationX="90dp"
         android:background="@color/colorPrimary"
         android:translationY="250dp"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:text="مشاهده ی آخرین برنامه" />
 
     <Button
@@ -35,16 +28,11 @@
         android:translationX="90dp"
         android:background="@color/colorPrimary"
         android:translationY="400dp"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:text="دریافت برنامه جدید" />
 
-    <Button
-        android:id="@+id/prof"
-        android:layout_width="62dp"
-        android:layout_height="69dp"
-        android:translationX="10dp"
-        android:translationY="10dp"
-        android:background="@drawable/prof"
-        android:text="" />
+
 
 
 </RelativeLayout>
