--- a/app/src/main/res/layout/activity_last_edite.xml
+++ b/app/src/main/res/layout/activity_last_edite.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#76b852"
+    android:background="@drawable/backedit"
     tools:context=".activity.last_edite">
     <Button
         android:id="@+id/delet"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:text="حذف زمان موزد نظر"
+        android:background="#d33944"
         android:translationX="70dp"
-        android:translationY="490dp" />
+        android:translationY="490dp"/>
 
     <EditText
         android:id="@+id/id"
@@ -26,7 +27,8 @@
         android:id="@+id/plan"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:text="دریافت برنامه"
+        android:text="مرحله بعد"
+        android:background="#3277ba"
         android:translationX="230dp"
         android:translationY="490dp" />
 
@@ -38,6 +40,7 @@
             android:id="@+id/show_times"
             android:layout_width="match_parent"
             android:layout_height="43dp"
+            android:background="#FFFAFA"
             android:text="" />
     </ScrollView>
 
