--- a/app/src/main/res/layout/activity_taghvim.xml
+++ b/app/src/main/res/layout/activity_taghvim.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#76b852"
+    android:background="#5ec3d5"
     android:layout_height="match_parent"
     tools:context=".activity.taghvim">
 
