--- a/app/src/main/res/layout/activity_patern.xml
+++ b/app/src/main/res/layout/activity_patern.xml
@@ -17,7 +17,20 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:background="#FFFAFA"
-        android:translationY="250dp"
+        android:translationY="170dp"
+        >
+
+    </Spinner>
+    <Spinner
+        android:layout_width="368dp"
+        android:layout_height="64dp"
+        android:id="@+id/spin_exam_b"
+        android:translationX="20dp"
+        android:textAlignment="gravity"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:background="#FFFAFA"
+        android:translationY="270dp"
         >
 
     </Spinner>
