--- a/app/src/main/res/layout/activity_next_exam.xml
+++ b/app/src/main/res/layout/activity_next_exam.xml
@@ -5,25 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#5ec3d5"
-    tools:context=".activity.patern">
-
-
+    tools:context=".activity.next_exam">
     <Spinner
         android:layout_width="368dp"
         android:layout_height="64dp"
-        android:id="@+id/spin_patern"
+        android:id="@+id/spin_exam_b"
         android:translationX="20dp"
         android:textAlignment="gravity"
         android:layout_gravity="center"
         android:gravity="center"
         android:background="#FFFAFA"
-        android:translationY="170dp"
+        android:translationY="270dp"
         >
 
     </Spinner>
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/next_step"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:translationX="180dp"
@@ -32,4 +30,5 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="مرحله بعدی" />
+
 </RelativeLayout>
